cloudformation-alb-windows/templates/securitygroup/securitygroup.yml
AWSTemplateFormatVersion: 2010-09-09
Description: SecurityGroup for template

Parameters:
  SystemName:
    Type: String
    AllowedPattern: '[a-z0-9-]*'
  EnvType:
    Type: String
    AllowedPattern: '[a-z0-9-]*'

Mappings:
  AzMap:
    ap-northeast-1:
      1st: ap-northeast-1a
      2nd: ap-northeast-1c
      3rd: ap-northeast-1d

Resources:
  SecurityGroupEc2Bastion:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-bastion
      GroupDescription: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-bastion
      VpcId:
        Fn::ImportValue: !Sub ${SystemName}-${EnvType}-vpc-id
      SecurityGroupIngress:
        - Description: SSH from FullOpen
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-bastion
        - Key: SystemName
          Value: !Ref SystemName
        - Key: EnvType
          Value: !Ref EnvType

  SecurityGroupEc2Windows:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-windows
      GroupDescription: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-windows
      VpcId:
        Fn::ImportValue: !Sub ${SystemName}-${EnvType}-vpc-id
      SecurityGroupIngress:
        - Description: RDP from Bastion
          SourceSecurityGroupId: !Ref SecurityGroupEc2Bastion
          FromPort: 3389
          ToPort: 3389
          IpProtocol: tcp
        - Description: RDP from ApplicationLoadBalancer
          SourceSecurityGroupId: !Ref SecurityGroupApplicationLoadBalancer
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-windows
        - Key: SystemName
          Value: !Ref SystemName
        - Key: EnvType
          Value: !Ref EnvType

  SecurityGroupApplicationLoadBalancer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${SystemName}-${EnvType}-securitygroup-alb
      GroupDescription: !Sub ${SystemName}-${EnvType}-securitygroup-alb
      VpcId:
        Fn::ImportValue: !Sub ${SystemName}-${EnvType}-vpc-id
      SecurityGroupIngress:
        - Description: HTTP from FullOpen
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
        - Description: HTTPS from FullOpen
          CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
      Tags:
        - Key: Name
          Value: !Sub ${SystemName}-${EnvType}-securitygroup-alb
        - Key: SystemName
          Value: !Ref SystemName
        - Key: EnvType
          Value: !Ref EnvType

Outputs:
  SecurityGroupEc2BastionId:
    Value: !Ref SecurityGroupEc2Bastion
    Export:
      Name: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-bastion-id
  SecurityGroupEc2WindowsId:
    Value: !Ref SecurityGroupEc2Windows
    Export:
      Name: !Sub ${SystemName}-${EnvType}-securitygroup-ec2-windows-id
  SecurityGroupApplicationLoadBalancerId:
    Value: !Ref SecurityGroupApplicationLoadBalancer
    Export:
      Name: !Sub ${SystemName}-${EnvType}-securitygroup-alb-id
